Edit and list views

--- a/Taskify.Web/Views/Shared/_Layout.cshtml
+++ b/Taskify.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("View Chores", "Index", "Chore")</li>
                     <li>@Html.ActionLink("Add Chore", "Add", "Chore")</li>
                 </ul>
             </div>
